externalize config in SecurityConfig